# Ballot-Initiative

./: .env.example  .gitignore  Initiative OCR Prompt for ChatGPT.docx  LICENSE  LICENSE.md  README.md  config.json  main.py  ocr_helper_functions.py  pom.xml  pyproject.toml  railway.json  requirements.txt
.devcontainer/: Codespaces.md  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: main.yml  python-app.yml  system_test.yaml
app/: .gitignore  Home.py  __init__.py  address_util.py  app.py  env.example.py  extract_tester.py  fuzzy_match_helper.py  ocr_helper.py  ocr_matching_functions_2024_09.py  requirements.txt  run.py  run_docker.py  settings_reader.py  settings_repo.py  utils_docker.py
app/ocr/: __init__.py  ocr_client_factory.py
cross_referencing_tests/: address_util.py  crossref.py  rapidfuzz_exploration.py
crossreferencing/: address_util.py
data/: processed_ocr_data.json
main_app/: app.py  app_deprecated.py
notebooks/: 2024-01-08-initiative-83-single-pdf.ipynb  2024-07-18-onboarding-notebook.ipynb  2024_09_19_initiative_83_single_pdf.ipynb  2025-01-08-initiative-83-single-pdf.ipynb  2025-01-20-onboarding-notebook.ipynb  2025-03-20-google-gemini-2.0-flash-api.ipynb  matching_algorithm_benchmarks.ipynb  ocr_matching_functions_2024_09.py  onboarding_notebook.ipynb  onboarding_notebook_colab.ipynb
prompt_engineering/: ocr_prompt_chatgpt.txt
sample_data/: README.md  all_petition_signers.csv  fake_voter_records.csv  spurious_signers.csv
tests/: __init__.py  test_settings_reader.py  test_settings_repo.py  test_settings_toml.py
(+27 files in other folders)
